--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               }
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/remixicon/fonts/remixicon.css"
+              "src/styles.css"
 ],
             "scripts": []
           },
