--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
+    "moment": "^2.30.1",
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "remixicon": "^4.6.0",
